tests/ui/const-generics/associated-const-bindings/dyn-compat-self-const-projections-in-supertrait-bounds.stderr
error[E0038]: the trait `Trait` is not dyn compatible
  --> $DIR/dyn-compat-self-const-projections-in-supertrait-bounds.rs:19:16
   |
LL |     let _: dyn Trait;
   |                ^^^^^ `Trait` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/dyn-compat-self-const-projections-in-supertrait-bounds.rs:10:14
   |
LL | trait Trait: SuperTrait<{ Self::N }> {
   |       -----  ^^^^^^^^^^^^^^^^^^^^^^^ ...because it uses `Self` as a type parameter
   |       |
   |       this trait is not dyn compatible...

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0038`.
